--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             type="submit"
           >
             <a href="#" class="text-decoration-none text-white">contact us</a>
-            <div class="like-before"></div>
+            <div class="like-after"></div>
           </button>
         </div>
       </nav>
@@ -879,7 +879,7 @@
         </div>
       </div>
     </section>
-    <!-- section sex -->
+    <!-- section six -->
     <section>
       <div class="row section-header">
         <div class="col-lg-5 col-md-8 m-auto text-center">
