--- a/index.html
+++ b/index.html
@@ -22,10 +22,26 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./images/accept.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="">
+    <!-- scroll top -->
+    <div id="scroll-top" class="rounded-circle">
+      <i class="fa-solid fa-arrow-up"></i>
+    </div>
+    <!-- pre-louder -->
+    <div id="pre-louder">
+      <div
+        class="pre-louder-content d-flex justify-content-center align-items-center"
+      >
+        <div
+          class="circle-parent rounded-circle d-flex justify-content-center align-items-center"
+        ></div>
+        <img src="./images/logo.webp" alt="" class="img-fluid" />
+      </div>
+    </div>
+    <header>
       <nav class="navbar navbar-expand-lg py-0">
         <div class="container">
           <a class="navbar-brand" href="#">
@@ -47,7 +63,7 @@
                   <a class="nav-link" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About Us</a>
+                  <a class="nav-link" href="./html/about.html">About Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Services</a>
@@ -83,35 +99,29 @@
       <div class="container py-2">
         <div class="row">
           <div class="col-lg-7">
-            <h1 class="fw-bold animate animate-xl ">
+            <h1 class="fw-bold animate-to-right">
               We Collect <br />
               High Quality Leads
             </h1>
-            <p class="animate animate-xl">
+            <p class="animate-to-right">
               Lorem ipsum dolor sit amet, consec adipiscing elit, sed do eiusmod
               tempor incididunt ut labore et dolore magna aliqua. Quis ipsum
               suspendisse ultrices gravi.
             </p>
-            <button class="text-capitalize rounded animate animate-xl">
+            <button
+              class="landing-btn text-capitalize rounded animate-to-right"
+            >
               <a href="#" class="text-decoration-none text-white">contact us</a>
             </button>
           </div>
           <div class="col-lg-5 d-none d-lg-block">
-            <img
-              src="./images/hero_right.webp"
-              alt="image"
-              class="animate animate-xr"
-            />
+            <img src="./images/hero_right.webp" alt="image" />
           </div>
         </div>
       </div>
     </div>
-    <!-- scroll top -->
-    <div id="scroll-top" class="rounded-circle">
-      <i class="fa-solid fa-arrow-up"></i>
-    </div>
     <!-- section one -->
-    <section>
+    <section class="what-we-do">
       <div class="container">
         <div class="row section-header">
           <div class="col-lg-8 offset-lg-2 text-center">
@@ -279,7 +289,7 @@
       </div>
     </section>
     <!-- section two -->
-    <section>
+    <section class="we-create">
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
@@ -302,7 +312,7 @@
       </div>
     </section>
     <!-- section three -->
-    <section>
+    <section class="generating-area">
       <div class="container">
         <div class="row section-header">
           <div class="col-lg-8 offset-lg-2 text-center">
@@ -664,7 +674,7 @@
       </div>
     </section>
     <!-- section four -->
-    <section>
+    <section class="choose-best">
       <div class="container pb-5">
         <div class="row section-header">
           <div class="col-lg-8 offset-lg-2 text-center">
@@ -816,7 +826,7 @@
       </div>
     </section>
     <!-- section five -->
-    <section>
+    <section class="visit-area">
       <div class="container-fluid">
         <div class="row section-header">
           <div class="col-lg-8 offset-lg-2 text-center">
@@ -880,7 +890,7 @@
       </div>
     </section>
     <!-- section six -->
-    <section>
+    <section class="testimonial">
       <div class="row section-header">
         <div class="col-lg-5 col-md-8 m-auto text-center">
           <h2>What Client Say About Us​​​</h2>
@@ -908,7 +918,7 @@
         </div>
         <!-- content -->
         <div class="carousel-inner pt-5">
-          <div class="carousel-item active" data-bs-interval="10000">
+          <div class="carousel-item" data-bs-interval="10000">
             <div class="after-carosel-item">
               <div class="card border-0 bg-transparent">
                 <div>
@@ -935,7 +945,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item" data-bs-interval="20000">
+          <div class="carousel-item active" data-bs-interval="20000">
             <div class="after-carosel-item">
               <div class="card border-0 bg-transparent">
                 <div>
@@ -949,7 +959,7 @@
                 <div>
                   <div class="d-flex justify-content-center">
                     <img
-                      src="./images/logo.webp"
+                      src="./images/jinx.jpg"
                       class="img-fluid rounded-circle me-3"
                       alt="image"
                     />
@@ -1024,7 +1034,7 @@
       </svg>
     </section>
     <!-- section seven -->
-    <section>
+    <section class="tips-trikes-area">
       <div class="container">
         <div class="row section-header">
           <div class="col-lg-6 col-md-8 m-auto text-center">
@@ -1078,7 +1088,7 @@
       </div>
     </section>
     <!-- section eight -->
-    <section>
+    <section class="have-project">
       <div class="container">
         <div class="have-project mt-5">
           <div class="row align-items-center">
@@ -1099,6 +1109,7 @@
         </div>
       </div>
     </section>
+    <!-- footer -->
     <footer>
       <div class="container pt-5">
         <div class="row">
